--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <h1>Educar al Soberano</h1>
         <p>
-            Este sitio está dedicado a la educación ciudadana y la reflexión democrática.
-            Comparto recursos, videos y artículos para fomentar el pensamiento crítico y la participación social.
-            Si hay algún tema que te interesa, escribinos a educaralsoberano.com.ar@gmail.com y lo conversamos
+            Este sitio está dedicado a la educación ciudadana y la reflexión democrática.<br>
+            Comparto recursos, videos y artículos para fomentar el pensamiento crítico y la participación social.<br>
+            Si hay algún tema que te interesa, escribinos a educaralsoberano.com.ar@gmail.com y lo conversamos.<br>
         </p>
         <a href="https://www.youtube.com/@Educaralsoberano" target="_blank" title="Canal de YouTube">
             <img src="img/youtube-logo.png" alt="Logo de YouTube" style="width:120px;">
