--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educar al Soberano</title>
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Educar al Soberano</h1>
         <p>
-            Este sitio está dedicado a la educación ciudadana y la reflexión democrática.<br>
+            Ddicado a la educación ciudadana y la reflexión democrática.<br>
             Comparto recursos, videos y artículos para fomentar el pensamiento crítico y la participación social.<br>
             Si hay algún tema que te interesa, escribinos a educaralsoberano.com.ar@gmail.com y lo conversamos.<br>
         </p>
