--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section style="text-align:center; margin-top:30px;">
             <h2>Video destacado de nuestro canal</h2>
             <iframe width="560" height="315"
-                src="https://www.youtube.com/watch?v=Nm9MVcu4M6w&list=PLgjXn0uFOKpnsbdjqZUw3b-yvTFh5_doI"
+                src="https://www.youtube.com/watch?v=a0OwCHThZCo"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
