--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <!-- Espacio para contenido adicional -->
         <section style="text-align:center; margin-top:30px;">
-            <h2>Video destacado de nuestro canal</h2>
+            <h2>Video destacado</h2>
             <iframe width="560" height="315"
                 src="https://www.youtube.com/watch?v=a0OwCHThZCo"
                 title="YouTube video player"
