--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section style="text-align:center; margin-top:30px;">
             <h2>Video destacado</h2>
             <iframe width="560" height="315"
-                src="https://www.youtube.com/watch?v=a0OwCHThZCo"
+                src="https://www.youtube.com/embed/VIDEO_ID"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
