--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Educar al Soberano</h1>
         <p>
-            Ddicado a la educación ciudadana y la reflexión democrática.<br>
+            Dedicado a la educación ciudadana y la reflexión democrática.<br>
             Comparto recursos, videos y artículos para fomentar el pensamiento crítico y la participación social.<br>
             Si hay algún tema que te interesa, escribinos a educaralsoberano.com.ar@gmail.com y lo conversamos.<br>
         </p>
