--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ley de Catastro Chubut 2025</title>
+    <title>LEducar al Soberano</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
@@ -206,33 +206,23 @@
 </head>
 <body>
     <header>
-        <h1>Proyecto de nueva Ley de Catastro para la Provincia del Chubut</h1>
+        <h1>“Hay que educar al soberano”</h1>
         <p>
-            Dada la necesidad de unificar los avances relativos a la adecuación de la Normativa Provincial a la Ley Nacional de Catastro N° 26.209 es que, se ha generado este espacio donde podrá ver las reseñas, los documentos y los avances.
-        </p>
+            Es en la formación del pueblo donde se garantiza la democracia y la republica. Es en la democracia y la republica donde se garantiza el liberalismo politico y la unidad de la comunidad.
     </header>
     <div class="container">
         <div class="left-sidebars">
             <aside class="sidebar">
-                <h3>Normativa nacional complementaria al CCyCN</h3>
+                <h3>Entrada</h3>
                 <ul>
-                    <li><a href="https://servicios.infoleg.gob.ar/infolegInternet/anexos/50000-54999/53050/texact.htm" target="_blank">1968 Ley Nac. Registro de la propiedad inmueble Nº 17.801</a></li>
-                    <li><a href="https://servicios.infoleg.gob.ar/infolegInternet/anexos/120000-124999/124298/norma.htm" target="_blank">2007 Ley Nac. Catastro N°26.209</a></li>
+                    <li><a href="https://servicios.infoleg.gob.ar/infolegInternet/anexos/50000-54999/53050/texact.htm" target="_blank">nombre</a></li>
+
                 </ul>
             </aside>
             <aside class="sidebar">
-                <h3>Normativa provincial actual (aún no adecuada a la 26.209)</h3>
+                <h3>Entrada</h3>
                 <ul>
-                    <li><a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/1965-Ley-III-4-DGCeIT.pdf" target="_blank">1965 Ley Prov. de Catastro (III N°4)</a></li>
-                    <li><a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/1985_Resol_186-85.pdf" target="_blank">1985 Res.186-85</a></li>
-                    <li><a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/1997_Disposicion-24-97-DCeIT-.pdf" target="_blank">1997 Disp.024-97</a></li>
-                </ul>
-            </aside>
-            <aside class="sidebar">
-                <h3>Bibliografía complementaria</h3>
-                <ul>
-                    <li><a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/2017 XIX Congreso NAcional y V Doro Inernacional de Derecho Registral.pdf" target="_blank">2017 Concenso Derecho de Superficie</a></li>
-                    <li><a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/2024_superficie_UNLSJB_23-08-2024.pdf" target="_blank">2024 Adecuando el Derecho de Superficie a Chubut</a></li>
+                    <li><a href="https://servicios.infoleg.gob.ar/infolegInternet/anexos/50000-54999/53050/texact.htm" target="_blank">nombre</a></li>
                 </ul>
             </aside>
         </div>
@@ -262,23 +252,22 @@
         </main>
         <div class="right-sidebars">
             <aside class="sidebar">
-                <h3>Proyecto de Ley (versiones)</h3>
+                <h3>Links de interés</h3>
                 <ul>
-                    <li><a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/2025-09-03_Para_Comentar.pdf" target="_blank">2025 Proyecto del 3 de septiembre de 2025</a></li>
+                    <li><a href="https://museosarmiento.cultura.gob.ar/" target="_blank">Museo Historico Sarmiento</a></li>
                 </ul>
             </aside>
             <aside class="sidebar">
                 <h3>Links de interés</h3>
                 <ul>
-                    <li><a href="https://academianacionaldeagrimensurablog.wordpress.com/" target="_blank">Academia Nacional de Agrimensura</a></li>
-                    <li><a href="https://www.universidadnotarial.edu.ar/una/" target="_blank">Universidad Notarial Argentina</a></li>
+                    <li><a href="https://museosarmiento.cultura.gob.ar/" target="_blank">Museo Historico Sarmiento</a></li>
             </aside>
         </div>
     </div>
     <footer>
         <hr>
         <p>
-            Email: leyprovincialdecatastrochubut@gmail.com<br>
+            Email: educarlasoberano.com.ar@gmail.com<br>
         </p>
     </footer>
     <style>
