--- a/index.html
+++ b/index.html
@@ -229,13 +229,7 @@
         <main class="main-content">
             <h2>Novedades</h2>
             <div class="novedad">
-                <h4>Provincias que han aplicado la Ley Nacional de Catastro Nº 26.209</h4>
-                <p>En marrón las provincias que ya aplican la Ley Nacional de Catastro 26.209 (incluyendo a CABA) o equivalente (Bs.As.) y en azul la Provincia del Chubut.
-                    Es decir, se está trabajando en la implementación de la Ley Nacional de Catastro Nº 26.209 que es norma legislativa general de fondo y que actualmente no se está aplicando en la Provincia del Chubut.</p>
-                <img src="img/logo3.png" alt="Logo">
-            </div>
-            <div class="novedad">
-                <h4>Actualización del 3 de septiembre de 2025</h4>
+                <h4>Nueva entrada</h4>
                 <p>Ya está disponible el borrador actualizado del Proyecto de Ley Provincial de Catastro del 3 de septiembre de 2025 para descargarlo y agregar comentarios si entras al drive. <a href="https://github.com/GUILLERMOOCONNOR/leyprovincialdecatastrochubut.ar/blob/main/2025-09-03_Para_Comentar.pdf" target="_blank">Link al archivo aquí</a></p>
             </div>
             <div class="novedad">
@@ -243,7 +237,7 @@
                 <p>La Normativa General Nacional se actualizo en 2.007 mediante la Ley Nacional de Catastro 26.209 y en 2015 con el Codigo Civíl y Comercial de la Nación (en adelante, CCyCN) del 2.015 que es Ley 26.994. La Ley Nacional de Catastro 26.209, al igual que la Ley de Registro de la Propiedad 17.801 del 1968 son complementarias al CCyCN. Por ello, adeducar la normativa provincial a la normativa nacional es menester para lograr una armonia de la norma pero tambien, para establecer el marco normativo que permita llevar a nuestra Provincia del Chubut a la modernidad de los desafios tecnologicos y productivos actuales.<p></p>
             </div>
             <div class="contact-form">
-                <h3>Para mas información o sugerencias, contactanos</h3>
+                <h3>Nueva entrada </h3>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe-iqIY9RD8u4-2lI9XiMO5ZCVs3G1QyL5tKdJKcddlLaVO-g/viewform?usp=header" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 <p style="font-size:0.95em;color:#555;margin-top:10px;">
                     * Si el formulario no funciona, puedes escribir a <a href="mailto:leyprovincialdecatastrochubut@gmail.com">leyprovincialdecatastrochubut@gmail.com</a>
