--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            margin: 0;
-            font-family: 'Segoe UI', 'Arial', sans-serif;
-            background: #f8f9fa;
-            color: #222;
+        margin: 0;
+        font-family: 'Segoe UI', 'Arial', sans-serif;
+        background: #f9f7f4; /* blanco roto */
+        color: #3f5e3f; /* verde oscuro para texto principal */
         }
         header {
-            background: linear-gradient(90deg, #005c97 0%, #363795 100%);
-            color: #fff;
+            background: linear-gradient(90deg, #7ba17b 0%, #b99a7c 100%);
+            color: #f9f7f4; /* blanco roto */
             padding: 30px 0 20px 0;
             text-align: center;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+            box-shadow: 0 2px 8px rgba(110,75,51,0.07);
         }
         header h1 {
             font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
