--- a/index.html
+++ b/index.html
@@ -20,155 +20,156 @@
             box-shadow: 0 2px 8px rgba(110,75,51,0.07);
         }
         header h1 {
-            font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
-            font-size: 2.2em;
-            margin-bottom: 10px;
-            letter-spacing: 1px;
-        }
-        header p {
-            font-size: 1.1em;
-            margin: 0 auto;
-            max-width: 700px;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            margin-top: 30px;
-            gap: 20px;
-        }
-        .left-sidebars, .right-sidebars {
-            display: flex;
-            flex-direction: column;
-            gap: 18px;
-        }
-        .sidebar {
-            width: 220px;
-            padding: 22px 18px;
-            background: #e3e7ef;
-            border-radius: 12px;
-            margin: 0 0 20px 0;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-            font-size: 1em;
-        }
-        .sidebar h3 {
-            color: #363795;
-            font-size: 1.1em;
-            margin-top: 0;
-            margin-bottom: 12px;
-            font-weight: 600;
-            letter-spacing: 0.5px;
-        }
-        .sidebar ul {
-            padding-left: 18px;
-            margin: 0;
-        }
-        .sidebar ul li {
-            margin-bottom: 8px;
-        }
-        .sidebar ul li a {
-            color: #005c97;
-            text-decoration: none;
-            transition: color 0.2s;
-            font-weight: 500;
-        }
-        .sidebar ul li a:hover {
-            color: #363795;
-            text-decoration: underline;
-        }
-        .main-content {
-            flex: 1;
-            max-width: 650px;
-            padding: 28px 28px 18px 28px;
-            background: #fff;
-            border-radius: 14px;
-            box-shadow: 0 2px 12px rgba(0,0,0,0.07);
-            font-size: 1.08em;
-        }
-        .main-content h2 {
-            color: #005c97;
-            font-size: 1.3em;
-            margin-top: 0;
-            margin-bottom: 18px;
-            font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
-        }
-        .novedad {
-            margin-bottom: 32px;
-            border-left: 4px solid #005c97;
-            padding-left: 16px;
-            background: #f3f6fa;
-            border-radius: 6px;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.03);
-        }
-        .novedad h4 {
-            color: #363795;
-            margin-bottom: 6px;
-            margin-top: 10px;
-            font-size: 1.1em;
-        }
-        .novedad img {
-            max-width: 100%;
-            border-radius: 8px;
-            margin-top: 10px;
-            box-shadow: 0 1px 6px rgba(0,0,0,0.07);
-        }
-        /* Formulario de contacto */
-        .contact-form {
-            background: #f3f6fa;
-            border-radius: 10px;
-            padding: 18px 16px 12px 16px;
-            box-shadow: 0 1px 6px rgba(0,0,0,0.06);
-            margin-top: 18px;
-        }
-        .contact-form h3 {
-            margin-top: 0;
-            color: #005c97;
-            font-size: 1.1em;
-        }
-        .contact-form label {
-            display: block;
-            margin-bottom: 6px;
-            font-weight: 500;
-        }
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 7px 10px;
-            margin-bottom: 12px;
-            border: 1px solid #bfc9d9;
-            border-radius: 5px;
-            font-size: 1em;
-            font-family: inherit;
-            background: #fff;
-        }
-        .contact-form textarea {
-            resize: vertical;
-            min-height: 60px;
-        }
-        .contact-form button {
-            background: linear-gradient(90deg, #005c97 0%, #363795 100%);
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 22px;
-            font-size: 1em;
-            cursor: pointer;
-            font-weight: 600;
-            transition: background 0.2s;
-        }
-        .t-form button:hover {
-            background: linear-gradient(90deg, #363795 0%, #005c97 100%);
-        }
-        footer {
-            margin-top: 40px;
-            background: #e3e7ef;
-            color: #363795;
-            text-align: center;
-            padding: 18px 0 10px 0;
-            font-size: 1em;
-            border-top: 1px solid #bfc9d9;
-        }
-        /* Eliminado el contador de visitas */
+        font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+        font-size: 2.2em;
+        margin-bottom: 10px;
+        letter-spacing: 1px;
+        color: #3f5e3f;
+    }
+    header p {
+        font-size: 1.1em;
+        margin: 0 auto;
+        max-width: 700px;
+    }
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        margin-top: 30px;
+        gap: 20px;
+    }
+    .left-sidebars, .right-sidebars {
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+    }
+    .sidebar {
+        width: 220px;
+        padding: 22px 18px;
+        background: #d6e8db; /* verde pastel claro */
+        border-radius: 12px;
+        margin: 0 0 20px 0;
+        box-shadow: 0 2px 8px rgba(110,75,51,0.06);
+        font-size: 1em;
+        border-left: 4px solid #b99a7c; /* marrón medio */
+    }
+    .sidebar h3 {
+        color: #6e4b33; /* marrón oscuro */
+        font-size: 1.1em;
+        margin-top: 0;
+        margin-bottom: 12px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+    }
+    .sidebar ul {
+        padding-left: 18px;
+        margin: 0;
+    }
+    .sidebar ul li {
+        margin-bottom: 8px;
+    }
+    .sidebar ul li a {
+        color: #7ba17b; /* verde medio */
+        text-decoration: none;
+        transition: color 0.2s;
+        font-weight: 500;
+    }
+    .sidebar ul li a:hover {
+        color: #6e4b33; /* marrón oscuro */
+        text-decoration: underline;
+    }
+    .main-content {
+        flex: 1;
+        max-width: 650px;
+        padding: 28px 28px 18px 28px;
+        background: #e9ded3; /* marrón pastel claro */
+        border-radius: 14px;
+        box-shadow: 0 2px 12px rgba(123,161,123,0.07);
+        font-size: 1.08em;
+        color: #3f5e3f; /* verde oscuro */
+    }
+    .main-content h2 {
+        color: #7ba17b; /* verde medio */
+        font-size: 1.3em;
+        margin-top: 0;
+        margin-bottom: 18px;
+        font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+    }
+    .novedad {
+        margin-bottom: 32px;
+        border-left: 4px solid #7ba17b; /* verde medio */
+        padding-left: 16px;
+        background: #d6e8db; /* verde pastel claro */
+        border-radius: 6px;
+        box-shadow: 0 1px 4px rgba(123,161,123,0.03);
+    }
+    .novedad h4 {
+        color: #6e4b33;
+        margin-bottom: 6px;
+        margin-top: 10px;
+        font-size: 1.1em;
+    }
+    .novedad img {
+        max-width: 100%;
+        border-radius: 8px;
+        margin-top: 10px;
+        box-shadow: 0 1px 6px rgba(185,154,124,0.07);
+    }
+    .contact-form {
+        background: #d6e8db; /* verde pastel claro */
+        border-radius: 10px;
+        padding: 18px 16px 12px 16px;
+        box-shadow: 0 1px 6px rgba(110,75,51,0.06);
+        margin-top: 18px;
+    }
+    .contact-form h3 {
+        margin-top: 0;
+        color: #3f5e3f;
+        font-size: 1.1em;
+    }
+    .contact-form label {
+        display: block;
+        margin-bottom: 6px;
+        font-weight: 500;
+    }
+    .contact-form input,
+    .contact-form textarea {
+        width: 100%;
+        padding: 7px 10px;
+        margin-bottom: 12px;
+        border: 1px solid #b99a7c; /* marrón medio */
+        border-radius: 5px;
+        font-size: 1em;
+        font-family: inherit;
+        background: #f9f7f4; /* blanco roto */
+    }
+    .contact-form textarea {
+        resize: vertical;
+        min-height: 60px;
+    }
+    .contact-form button {
+        background: linear-gradient(90deg, #7ba17b 0%, #b99a7c 100%);
+        color: #f9f7f4;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 22px;
+        font-size: 1em;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background 0.2s;
+    }
+    .contact-form button:hover {
+        background: linear-gradient(90deg, #6e4b33 0%, #3f5e3f 100%);
+    }
+    footer {
+        margin-top: 40px;
+        background: #e9ded3; /* marrón pastel claro */
+        color: #3f5e3f;
+        text-align: center;
+        padding: 18px 0 10px 0;
+        font-size: 1em;
+        border-top: 1px solid #b99a7c;
+    }
         @media (max-width: 1100px) {
             .container {
                 flex-direction: column;
