--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <header>
         <h1>“Hay que educar al soberano”</h1>
         <p>
-            Es en la formación del pueblo donde se garantiza la democracia y la republica. Es en la democracia y la republica donde se garantiza el liberalismo politico y la unidad de la comunidad.
+            Es en la formación del pueblo donde se garantiza la democracia y la republica. Es en la democracia y la republica donde se garantiza el liberalismo politico y la felicidad de la comunidad.
     </header>
     <div class="container">
         <div class="left-sidebars">
